<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/productVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/product_version"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/productVersion_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/product_version_1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="15dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/productBy1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_by1"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/productBy1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/product_by1_1"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/productBy2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_by2"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/productBy2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/product_by2_1"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/productBy3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_by3"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/productBy3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/product_by3_1"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/productBy4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_by4"
            android:textSize="10dp"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btn_info_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="닫       기" />
    </LinearLayout>

</LinearLayout>